@@ -1,5 +1,11 @@
 2011-11-28  Steve Huntley  <stephen.huntley@alum.mit.edu>
 
+	* zipvfs.tcl: Applied contributed patch for bug 3395782.  Enables 
+	extraction of contents of zip files created using Fossil.
+
+
+2011-11-28  Steve Huntley  <stephen.huntley@alum.mit.edu>
+
 	* zipvfs.tcl: Reverted bug fix for 3224057.  See bug ID 3303287.
 
 
